--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     .centrar {
-        margin-left: 38px;
+        margin-left: 45px;
     }
     h1{
         font-size: 6rem;
@@ -8,8 +8,8 @@
     
     
     }
-    @media (max-width: 375px){  /*esto no se porque no me funicona*/
-        .logo{
+    @media (max-width: 375px){ 
+        .logoq{
            display: none;
        }
     }
