--- a/css/style.css
+++ b/css/style.css
@@ -182,13 +182,12 @@ h4 {
 
 @media (max-width: 768px) {
   .centrar {
-    margin-left: 38px; }
+    margin-left: 45px; }
   h1 {
     font-size: 6rem; } }
 
 @media (max-width: 375px) {
-  /*esto no se porque no me funicona*/
-  .logo {
+  .logoq {
     display: none; } }
 
 .logo {
